Add DeltaFile schema version tests for v6 and v7 (take 2)