@@ -1195,13 +1195,357 @@ public class SchemaVersion {
             "schemaVersion" : 6
         }""";
 
+    private static final String DELTAFILE_JSON_V7 = """
+        {
+            "_id" : "v7",
+            "parentDids" : [ ],
+            "childDids" : [ ],
+            "requeueCount" : 0,
+            "ingressBytes" : NumberLong(36),
+            "referencedBytes" : NumberLong(36),
+            "totalBytes" : NumberLong(36),
+            "stage" : "COMPLETE",
+            "inFlight" : false,
+            "terminal" : true,
+            "contentDeletable" : true,
+            "actions" : [
+                {
+                    "name" : "IngressAction",
+                    "type" : "INGRESS",
+                    "flow" : "",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.521Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.637Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "cf06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }
+                    ],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeTransformAction",
+                    "type" : "TRANSFORM",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "df06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }
+                    ],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeLoadAction",
+                    "type" : "LOAD",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1
+                    "content" : [],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [
+                        {
+                            "name" : "binary",
+                            "mediaType" : "text/plain"
+                        }
+                    ],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeEnrichAction",
+                    "type" : "ENRICH",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1
+                    "content" : [],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : [
+                        {
+                            "name" : "binaryEnrichment",
+                            "value" : "binary enrichment value",
+                            "mediaType" : "text/plain"
+                        }
+                    ]
+                },
+                {
+                    "name" : "SmokeFormatAction",
+                    "type" : "FORMAT",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "ef06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                }
+            ],
+            "sourceInfo" : {
+                "filename" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                "flow" : "smoke",
+                "metadata" : {},
+                "processingType" : "NORMALIZATION"
+            },
+            "annotations" : {
+              "keyA" : "valueA",
+              "keyB" : "valueB",
+            },
+            "annotationKeys" : [ "keyA", "keyB" ],
+            "egress" : [
+                {
+                    "flow" : "smoke"
+                }
+            ],
+            "created" : ISODate("2023-05-10T10:38:56.521Z"),
+            "modified" : ISODate("2023-05-10T10:38:57.402Z"),
+            "egressed" : true,
+            "filtered" : false,
+            "version" : NumberLong(7),
+            "_class" : "org.deltafi.common.types.DeltaFile"
+            "schemaVersion" : 7
+        }""";
+
+    private static final String DELTAFILE_JSON_V8 = """
+        {
+            "_id" : "v8",
+            "parentDids" : [ ],
+            "childDids" : [ ],
+            "requeueCount" : 0,
+            "ingressBytes" : NumberLong(36),
+            "referencedBytes" : NumberLong(36),
+            "totalBytes" : NumberLong(36),
+            "stage" : "COMPLETE",
+            "inFlight" : false,
+            "terminal" : true,
+            "contentDeletable" : true,
+            "actions" : [
+                {
+                    "name" : "IngressAction",
+                    "type" : "INGRESS",
+                    "flow" : "",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.521Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.637Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "cf06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }
+                    ],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeTransformAction",
+                    "type" : "TRANSFORM",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "df06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }
+                    ],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeLoadAction",
+                    "type" : "LOAD",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1
+                    "content" : [],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [
+                        {
+                            "name" : "binary",
+                            "mediaType" : "text/plain"
+                        }
+                    ],
+                    "enrichments" : []
+                },
+                {
+                    "name" : "SmokeEnrichAction",
+                    "type" : "ENRICH",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1
+                    "content" : [],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : [
+                        {
+                            "name" : "binaryEnrichment",
+                            "value" : "binary enrichment value",
+                            "mediaType" : "text/plain"
+                        }
+                    ]
+                },
+                {
+                    "name" : "SmokeFormatAction",
+                    "type" : "FORMAT",
+                    "flow" : "smoke",
+                    "state" : "COMPLETE",
+                    "created" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "queued" : ISODate("2023-05-10T10:38:56.639Z"),
+                    "start" : ISODate("2023-05-10T10:38:56.823Z"),
+                    "stop" : ISODate("2023-05-10T10:38:56.833Z"),
+                    "modified" : ISODate("2023-05-10T10:38:56.896Z"),
+                    "attempt" : 1,
+                    "content" : [
+                        {
+                            "name" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                            "mediaType" : "application/octet-stream",
+                            "segments" : [
+                                {
+                                    "uuid" : "ef06a93c-d8c4-4784-8269-279b642f6903",
+                                    "offset" : NumberLong(0),
+                                    "size" : NumberLong(36),
+                                    "did" : "f8cea8af-185e-4d96-80c7-68c47a8f5609"
+                                }
+                            ]
+                        }],
+                    "metadata": {},
+                    "deleteMetadataKeys": [],
+                    "domains" : [],
+                    "enrichments" : []
+                }
+            ],
+            "sourceInfo" : {
+                "filename" : "smoke-f7bc6fc1-0d56-4c5b-9e58-7b758f522ea2",
+                "flow" : "smoke",
+                "metadata" : {},
+                "processingType" : "NORMALIZATION"
+            },
+            "annotations" : {
+              "keyA" : "valueA",
+              "keyB" : "valueB",
+            },
+            "annotationKeys" : [ "keyA", "keyB" ],
+            "egress" : [
+                {
+                    "flow" : "smoke"
+                }
+            ],
+            "created" : ISODate("2023-05-10T10:38:56.521Z"),
+            "modified" : ISODate("2023-05-10T10:38:57.402Z"),
+            "egressed" : true,
+            "filtered" : false,
+            "version" : NumberLong(7),
+            "_class" : "org.deltafi.common.types.DeltaFile"
+            "schemaVersion" : 8
+        }""";
+
     private static final Document DELTAFILE_DOC_V0 = Document.parse(DELTAFILE_JSON_V0);
     private static final Document DELTAFILE_DOC_V1 = Document.parse(DELTAFILE_JSON_V1);
     private static final Document DELTAFILE_DOC_V2 = Document.parse(DELTAFILE_JSON_V2);
     private static final Document DELTAFILE_DOC_V3 = Document.parse(DELTAFILE_JSON_V3);
     private static final Document DELTAFILE_DOC_V4 = Document.parse(DELTAFILE_JSON_V4);
     private static final Document DELTAFILE_DOC_V5 = Document.parse(DELTAFILE_JSON_V5);
-    private static final Document DELTAFILE_LATEST = Document.parse(DELTAFILE_JSON_V6);
+    private static final Document DELTAFILE_DOC_V6 = Document.parse(DELTAFILE_JSON_V6);
+    private static final Document DELTAFILE_DOC_V7 = Document.parse(DELTAFILE_JSON_V7);
+    private static final Document DELTAFILE_LATEST = Document.parse(DELTAFILE_JSON_V8);
 
     public static final Map<Integer, Document> deltaFileDocs = Map.of(
             0, DELTAFILE_DOC_V0,
@@ -1210,7 +1554,9 @@ public class SchemaVersion {
             3, DELTAFILE_DOC_V3,
             4, DELTAFILE_DOC_V4,
             5, DELTAFILE_DOC_V5,
-            6, DELTAFILE_LATEST);
+            6, DELTAFILE_DOC_V6,
+            7, DELTAFILE_DOC_V7,
+            8, DELTAFILE_LATEST);
 
     public static void assertConverted(DeltaFileRepo deltaFileRepo, MongoTemplate mongoTemplate, int version) {
         Document document = deltaFileDocs.get(version);
@@ -1229,6 +1575,6 @@ public class SchemaVersion {
         mongoTemplate.insert(deltaFileDocs.get(version), "deltaFile");
         List<DeltaFile> deltaFiles = deltaFileRepo.findForDiskSpaceDelete(1, null, 1);
         assertEquals(1, deltaFiles.size());
-        assertEquals(3, deltaFiles.get(0).referencedSegments().size());
+        assertEquals(3, deltaFiles.getFirst().referencedSegments().size());
     }
 }
